syntax = "proto3";

option go_package = "/internal/grpc/waf";

service Transaction {
	rpc Create (NewTransaction) returns(TransactionStatus) {}
	rpc SetRequestBody (NewRequestBody) returns(TransactionStatus) {}
	rpc SetResponseHeaders (NewResponseHeaders) returns(TransactionStatus) {}
	rpc SetResponseBody (NewResponseBody) returns(TransactionStatus) {}	
	rpc Get (TransactionId) returns (TransactionStatus) {}
	rpc Close (TransactionId) returns (TransactionStatus) {}
}

enum phase {
	NO_PHASE = 0;
    REQUEST_HEADERS = 1;
    REQUEST_BODY = 2;
    RESPONSE_HEADERS = 3;
    RESPONSE_BODY = 4;
    LOGGING = 5;
}

message TransactionId {
	string txid = 1;
}

message Header {
	string key = 1;
	repeated string values = 2;
}

message NewTransaction {
	string wafkey = 1;
	string uri = 2;
	string method = 3;
	string protocol = 4;
	string request_addr = 5;
	int32 request_port = 6;
	string server_id = 7;
	repeated Header request_headers = 8;
	bool evaluate = 9;
}

message NewRequestBody {
	string txid = 1;
	bool evaluate = 2;
	bytes body = 3;
	string mime = 4;
}

message NewResponseHeaders {
	string txid = 1;
	bool evaluate = 2;
	repeated Header response_headers = 3;
	int32 status = 4;
	string protocol = 5;
}

message NewResponseBody {
	string txid = 1;
	bool evaluate = 2;
	bytes body = 3;
	bool finish = 4;
}

message TransactionStatus {
	string id = 1;
	bool disrupted = 2;
	bool pause = 3;
	string url = 4;
	string log = 5;
	int32 status = 6;
	phase lastphase = 7;
}

message TransactionFile {
	int64 length = 1;
	string mime = 2;
	string name = 3;
	bytes body = 4;
}